[REN] SEOS-1594: Rename C file to match "RPi" naming convention

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ function(RPi_SPI_Flash_DeclareCAmkESComponent name)
     DeclareCAmkESComponent(
         ${name}
         SOURCES
-            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/RPI_SPI_Flash.c
+            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/RPi_SPI_Flash.c
             ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/bcm2837_gpio.c
             ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/bcm2837_spi.c
             ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/spiflash.c
