[REF] Move sources to 3rdParty folder
External modules have been moved to the 3rdParty folder, so that they
can be easily distinguished.

Fixes:
SEOS-2067

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,9 +33,12 @@ function(RPi_SPI_Flash_DeclareCAmkESComponent name)
         ${name}
         SOURCES
             ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/RPi_SPI_Flash.c
-            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/bcm2837_gpio.c
-            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/bcm2837_spi.c
-            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/spiflash.c
+            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/3rdParty/bcm2837/bcm2837_gpio.c
+            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/3rdParty/bcm2837/bcm2837_spi.c
+            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/3rdParty/spiflash/spiflash.c
+        INCLUDES
+            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/3rdParty/bcm2837
+            ${CMAKE_CURRENT_FUNCTION_LIST_DIR}/3rdParty/spiflash
         C_FLAGS
             -Wall
             -Werror
