[REF] Add missing BSD-3-Clause License
Module is now licensed under the BSD-3-Clause permissive license
because of GPL-3.0 code being linked.

Fixes:
SEOS-2067

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@
 #
 # Copyright (C) 2020, Hensoldt Cyber GmbH
 #
+# SPDX-License-Identifier: BSD-3-Clause
+#
 
 cmake_minimum_required(VERSION 3.17)
 
