--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 #
 # RasPi3 (BCM2837) SPI Flash storage driver
 #
-# Copyright (C) 2020-2021, HENSOLDT Cyber GmbH
-# SPDX-License-Identifier: BSD-3-Clause
+# Copyright (C) 2020-2024, HENSOLDT Cyber GmbH
+# 
+# SPDX-License-Identifier: GPL-3.0-only
 #
 
 cmake_minimum_required(VERSION 3.17)
